--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" type="image/png" href="./images/favicon.png">
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.png"> This works for favicon.ico, 
+    for PNG format, use 'image/png' and also ensure href has the right URL to the image -->
     <title>MY CALCULATOR</title>
     <link rel="stylesheet" href="./css/myStyle.css">
 </head>
